# hacienda-gpt

./: .envrc  .gitignore  README.md  checks.nix  flake-shell.nix  flake.nix  formatter.nix  lib.nix  pyproject.toml
hacienda_gpt/cli/: crawler.py  processor.py
hacienda_gpt/crawler/: crawlers.py
hacienda_gpt/llm/: chain.py
hacienda_gpt/processor/: document_loader.py
hacienda_gpt/ui/: app.py
hacienda_gpt/utils/: __init__.py
projects/ingestor/: ingest.py
projects/llm/: chain.py
projects/ui/: app.py
