[tool.poetry]
name = "hacienda_gpt"
version = "0.1.0"
description = ""
authors = ["Aldo Borrero <82811+aldoborrero@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hacienda_gpt" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
openai = "^0.28.0"
streamlit = "^1.27.0"
langchain = "^0.0.304"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
pypdf = "^3.16.2"
cryptography = "^41.0.4"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.0"
huggingface-hub = "^0.17.3"
streamlit-extras = "^0.3.2"
tqdm = "^4.66.1"
tesseract = "^0.1.3"
unstructured = {version = "^0.10.18", extras = ["all-docs"]}
pdfminer-six = "^20221105"
click = "^8.1.7"
asyncio = "^3.4.3"
scrapy = "^2.11.0"
scrapy-fake-useragent = "^1.4.4"
scrapy-html-storage = "^0.4.0"
pathvalidate = "^3.2.0"
scrapy-playwright = "^0.0.32"
gpt4all = "^1.0.12"
ptpython = "^3.0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
fix = true
select = ['E', 'F', 'I', 'U', 'N']
ignore = ['E501']

[tool.ruff.isort]
force-sort-within-sections = true
no-lines-before = ["local-folder"]
known-first-party = ["cli"]